# rosaria

./: CMakeLists.txt  package.xml
include/rosaria/: RosAria.hpp
rosaria/: CMakeLists.txt  CMakeLists1.txt
rosaria/include/rosaria/: RosAria.hpp
rosaria/src/: RosAria.cpp
rosaria_msgs/: CMakeLists.txt  package.xml
rosaria_msgs/msg/: BumperState.msg
src/: RosAria.cpp
